<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.AddWidgetActivity">

    <TextView
        android:text="@string/label_name"
        android:labelFor="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />



    <TextView
        android:text="@string/label_type"
        android:labelFor="@+id/input_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Spinner
        android:id="@+id/input_type"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />



    <TextView
        android:text="@string/label_outpin"
        android:labelFor="@+id/input_outpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/input_outpin"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:ignore="TextFields" />



    <TextView
        android:text="@string/label_room"
        android:labelFor="@+id/input_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Spinner
        android:id="@+id/input_room"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />



    <Button
        android:id="@+id/button_submit"
        android:onClick="onSubmitButtonClicked"
        android:text="@string/label_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

</LinearLayout>
