<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    app:theme="@style/AppTheme"
    tools:context=".activities.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cloud"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/pref_server_url_label" />

    <EditText
        android:id="@+id/input_pref_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/pref_server_url_label" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableStart="@drawable/ic_language"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/pref_locale_label" />

    <Spinner
        android:id="@+id/input_pref_locale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/note_preferences" />

</LinearLayout>
