<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/card_vertical_margin"
    android:layout_marginBottom="@dimen/card_vertical_margin"
    android:layout_marginLeft="@dimen/card_horizontal_margin"
    android:layout_marginRight="@dimen/card_horizontal_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_padding">

        <LinearLayout
            android:id="@+id/context_toggle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:text="@string/label_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/card_component_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageButton
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/card_component_margin"
                android:gravity="bottom"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/action_options"
                android:tint="#4A4A4A"
                app:srcCompat="@drawable/ic_more_vert" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/card_component_margin"
            android:layout_marginStart="@dimen/card_component_margin"
            android:layout_marginEnd="@dimen/card_component_margin">

            <TextView
                android:id="@+id/value_indicator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <SeekBar
                android:id="@+id/value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:progress="0" />

            <ImageButton
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/action_update"
                android:tint="#4A4A4A"
                app:srcCompat="@drawable/ic_send" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
